# GraphCake

./: CMakeLists.txt  LICENSE.md  README.md
inc/Graphs/: AdjList.hpp  AdjMatrix.hpp  Algorithm.hpp  Benchmark.hpp  ColoringAlgorithms.hpp  Deserializer.hpp  Graph.hpp  SerializationFormats.hpp  Serializer.hpp
sample/: GraphML.GRAPHML
src/: AdjList.cpp  AdjMatrix.cpp  Benchmark.cpp  CMakeLists.txt  ColoringAlgorithms.cpp  Deserializer.cpp  Serializer.cpp  test.cpp
test/inc/: GraphRepresentationHelpers.hpp  SerializationHelpers.hpp
test/src/: AdjListTest.cpp  AdjMatrixTest.cpp  CMakeLists.txt  ColoringAlgorithmsTest.cpp  DeserializerTest.cpp  GraphRepresentationsTests.cpp  SerializationHelpers.cpp  SerializerTest.cpp
